agregar alt a las categorias de recetas

--- a/index.html
+++ b/index.html
@@ -40,57 +40,57 @@
             <div class="tipoComida">
                 <div class="comida">
                     <a href="#">
-                        <img src="./public/img/pollo.webp" alt="">
+                        <img src="./public/img/pollo.webp" alt="Categoría de recetas de Pollo">
                         <label for="">Pollo</label>
                     </a>
                 </div>
                 <div class="comida">
                     <a href="#">
-                        <img src="./public/img/carneMolida.webp" alt="">
+                        <img src="./public/img/carneMolida.webp" alt="Categoría de recetas de Carne Molida">
                         <label for="">Carne Molida</label>
                     </a>
                     
                 </div>
                 <div class="comida">
                     <a href="#">
-                        <img src="./public/img/postre.webp" alt="">
+                        <img src="./public/img/postre.webp" alt="Categoría de recetas de Postres">
                         <label for="">Postres</label>
                     </a>
                     
                 </div>
                 <div class="comida">
                     <a href="#">
-                        <img src="./public/img/atún.webp" alt="">
+                        <img src="./public/img/atún.webp" alt="Categoría de recetas de Atún">
                         <label for="">Atún</label>
                     </a>
                 </div>
                 <div class="comida">
                     <a href="#">
-                        <img src="./public/img/pasta.webp" alt="">
+                        <img src="./public/img/pasta.webp" alt="Categoría de recetas de Pastas">
                         <label for="">Pastas</label>
                     </a>
                 </div>
                 <div class="comida">
                     <a href="#">
-                        <img src="./public/img/desayuno.webp" alt="">
+                        <img src="./public/img/desayuno.webp" alt="Categoría de recetas de Desayunos">
                         <label for="">Desayunos</label>
                     </a>
                 </div>
                 <div class="comida">
                     <a href="#">
-                        <img src="./public/img/Lunch.webp" alt="">
+                        <img src="./public/img/Lunch.webp" alt="Categoría de recetas de Lunch">
                         <label for="">Lunch</label>
                     </a>
                 </div>
                 <div class="comida">
                     <a href="#">
-                        <img src="./public/img/comidas.webp" alt="">
+                        <img src="./public/img/comidas.webp" alt="Categoría de recetas de Comidas">
                     <label for="">Comidas</label>
                     </a>
                 </div>
                 <div class="comida">
                     <a href="#">
-                        <img src="./public/img/cenas.webp" alt="">
+                        <img src="./public/img/cenas.webp" alt="Categoría de recetas de Cenas">
                         <label for="">Cenas</label>
                     </a>
                 </div>
