correccion de tabindex

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 
     <header class="header">
-        <div class="logo">
+        <div class="logo" title="Página de recetas de Comidas">
             <img src="./public/img/logo.png" alt="">
-            <h1 tabindex="1">RECETIPS</h1>
+            <h1>RECETIPS</h1>
         </div>
         <nav>
             <ul class="nav-links">
@@ -244,7 +244,7 @@
         <div class="doble">
             <section class="columns" style="height: fit-content;">
                 <h3>VIDEO RECETA DE LA SEMANA</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Us6gzsVv_MA?si=OOZ5ujMZClHi4_BN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Us6gzsVv_MA?si=OOZ5ujMZClHi4_BN" title="Pizza en sartén sin horno. ¡Fácil y rápida!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>
             <section class="columns">
                 <h3>CONTÁCTANOS</h3>
