modificacion de algunos alt

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header class="header">
-        <div class="logo" title="Página de recetas de Comidas">
+        <div class="logo" title="Página de recetas de Cocina">
             <img src="./public/img/logo.png" alt="">
             <h1>RECETIPS</h1>
         </div>
@@ -36,6 +36,9 @@
         
     </header>
     <main>
+
+        <!-- ¿Qué quieres cocinar? -->
+        
         <section class="seccion">
             <h2>¿Qué quieres cocinar?</h2>
             <div class="tipoComida">
@@ -98,15 +101,17 @@
             </div>
         </section>
 
+        <!-- TOP 5 RECETAS DE LA SEMANA -->
+
         <section class="seccion">
             <h3>TOP 5 RECETAS DE LA SEMANA</h3>
             <div class="recetas">
                 <div class="receta">
                     <a href="#">
-                        <img src="./public/img/t1.webp" alt="">
+                        <img src="./public/img/t1.webp" alt="Receta">
                         <div class="card">
                             <p>MINI HAMBURGUESAS DE HUEVO</p>
-                            <div class="raiting" aria-label="raiting, cinco estrellas">
+                            <div class="raiting" aria-label="Raiting: cinco estrellas">
                                 <p>5.0</p>
                                 <span class="visually-hidden">Cinco estrellas: </span>
                                 <i class="fa-solid fa-star" style="color: #eec608;"></i>
@@ -121,7 +126,7 @@
                 </div>
                 <div class="receta">
                     <a href="#">
-                        <img src="./public/img/t5.webp" alt="">
+                        <img src="./public/img/t5.webp" alt="Receta">
                         <div class="card">
                             <p>TAMALES DE ELOTE DE PICO DE GALLO</p>
                             <div class="raiting" aria-label="raiting, cinco estrellas">
@@ -138,7 +143,7 @@
                 </div>
                 <div class="receta">
                     <a href="#">
-                        <img src="./public/img/t2.webp" alt="">
+                        <img src="./public/img/t2.webp" alt="Receta">
                         <div class="card">
                             <p>CREMA DE LECHUGA CON BETABEL</p>
                             <div class="raiting" aria-label="raiting, cinco estrellas">
@@ -156,7 +161,7 @@
                 </div>
                 <div class="receta">
                     <a href="#">
-                        <img src="./public/img/t3.webp" alt="">
+                        <img src="./public/img/t3.webp" alt="Receta">
                         <div class="card">
                             <p>ENCHILADAS SUIZAS</p>
                             <div class="raiting" aria-label="raiting, cinco estrellas">
@@ -174,7 +179,7 @@
                 </div>
                 <div class="receta">
                     <a href="#">
-                        <img src="./public/img/t4.webp" alt="">
+                        <img src="./public/img/t4.webp" alt="Receta">
                         <div class="card">
                             <p>FETTUCCINE CON ALAMBRE DE POLLO</p>
                             <div class="raiting" aria-label="raiting, cinco estrellas">
@@ -194,6 +199,8 @@
 
         </section>
 
+        <!-- TIP Y NOTA DEL DÍA -->
+
         <section class="seccion">
             <h3>TIP Y NOTA DEL DÍA</h3>
             <div class="row">
@@ -210,32 +217,34 @@
             </div>
         </section>
 
+        <!-- RECETARIOS PARA DESCARGAR -->
+
         <section class="seccion">
             <h3>RECETARIOS PARA DESCARGAR</h3>
             <div class="recetarios">
                 <div class="recetario">
                     <a href="#">
-                        <img src="./public/img/r1.webp" alt="Recetario 'Comidas con Tomatito'.">
+                        <img src="./public/img/r1.webp" alt="Descargar recetario 'Comidas con Tomatito'.">
                     </a>
                 </div>
                 <div class="recetario">
                     <a href="#">
-                        <img src="./public/img/r2.webp" alt="Recetario 'Antojitos garnacheros para celebrar a México'.">
+                        <img src="./public/img/r2.webp" alt="Descargar recetario 'Antojitos garnacheros para celebrar a México'.">
                     </a>
                 </div>
                 <div class="recetario">
                     <a href="#">
-                        <img src="./public/img/r3.webp" alt="Recetario 'Cenas saludables'.">
+                        <img src="./public/img/r3.webp" alt="Descargar recetario 'Cenas saludables'.">
                     </a>
                 </div>
                 <div class="recetario">
                     <a href="#">
-                        <img src="./public/img/r4.webp" alt="Recetario '10 tacos de leyenda'.">
+                        <img src="./public/img/r4.webp" alt="Descargar recetario '10 tacos de leyenda'.">
                     </a>
                 </div>
                 <div class="recetario">
                     <a href="#">
-                        <img src="./public/img/r5.webp" alt="Recetario 'Un mundo de chocolate para mamá'.">
+                        <img src="./public/img/r5.webp" alt="Descargar recetario 'Un mundo de chocolate para mamá'.">
                     </a>
                 </div>
             </div>
